feat: added openapi endpoint based on archguard spec
